@@ -414,9 +414,13 @@ VideoPanel::edit_colour_conversion_clicked ()
 	}
 
 	ContentColourConversionDialog* d = new ContentColourConversionDialog (this, vc.front()->video->yuv ());
-	d->set (vc.front()->video->colour_conversion().get_value_or (PresetColourConversion::all().front ().conversion));
-	d->ShowModal ();
-	vc.front()->video->set_colour_conversion (d->get ());
+	d->set (vc.front()->video->colour_conversion().get_value_or (PresetColourConversion::all().front().conversion));
+	if (d->ShowModal() == wxID_OK) {
+		vc.front()->video->set_colour_conversion (d->get ());
+	} else {
+		/* Reset the colour conversion choice */
+		film_content_changed (VideoContentProperty::COLOUR_CONVERSION);
+	}
 	d->Destroy ();
 }
 
